Styling with CSS

--- a/index.html
+++ b/index.html
@@ -3,7 +3,9 @@
     <head>
         <meta charset="utf-8">
         <link rel="stylesheet" href="main.css" />
-            <title>Cezary Calka | FAC | Web Developer </title>
+        <link href="https://fonts.googleapis.com/css?family=Anton|Playfair+Display&display=swap" rel="stylesheet">
+           
+                <title>Cezary Calka | FAC | Web Developer </title>
     </head>
     <body>
        <div id="container">
