'About Me' Changed - temporary version

--- a/index.html
+++ b/index.html
@@ -28,9 +28,7 @@
                     I have not considered it as a career, however, the passion for solving problems with the use of IT was brought back to life during my university studies.
                     Throughout one of the modules studied, I used python programming language to conduct sentiment analysis of Twitter messages and it sparked my interest 
                     back into the IT sector. Although, I was a business student, I knew that technical knowledge interests me more than purely a commercial one. 
-                    That’s why I am highly motivated to start new career in web development. I believe that my passion for new technologies combined with experiences 
-                    I behold will result in my career change. Openclassrooms scholarship is a catalyst which would catapult me right into the place where I wish to arrive, 
-                    as my programing skills are not sufficient yet to succeed. </p>
+                    That’s why I am highly motivated to start new career in web development. </p>
            </div>
 
            <div id="pic-slider">
